menu contrast fix WSCOE

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -678,7 +678,7 @@ body{
     
     &.visited
     {
-        background-color: @esdc-disabled !important;
+        background-color:darken(@esdc-disabled, 30%) !important;
         color: @esdc-disabled-text !important;
         &:hover
         {
